Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53201

Win10: Html button triggers onClick twice with touch event

XMLWordPrintable

    • cf8bc1899abbce736a29841a10119fc0ca8b8b42

      On Touch device html button triggers the onClick twice when button is touched only once.
      This can be easily reproducible with qtwebengine\webenginewidgets demo browser example and this url:
      http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_button_test

      if you touch the button only once in above html you see the java script popup comes up twice.

      I was able to see this with latest update of win10 and with Windows Version 1511 (OS Build 10586.218).

        For Gerrit Dashboard: QTBUG-53201
        # Subject Branch Project Status CR V

            alexandru.croitor Alexandru Croitor
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes