Stop forwarding OS synthesized touch-to-mouse events.

Before the change, chromium would process an onclick handler twice,
once due to a touch event, and another time due to the OS synthesized
mouse event.

Patch makes sure only the touch events are forwarded to Chromium. This
is consistent with mainline Chrome behavior.

Task-number: QTBUG-53201
Change-Id: I16f46b94890c2f6fa9a9089f7c721ec79e0bc96b
Reviewed-by: Kai Koehne <kai.koehne@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>